fixed z-index issues

--- a/src/containers/Header/style.scss
+++ b/src/containers/Header/style.scss
@@ -6,14 +6,14 @@
   padding: 10px;
   background: white;
   width: 60vw;
-  z-index: 1;
+  z-index: 2;
   -webkit-transition: left 0.5s;
 }
 .navBarClose {
   position: fixed;
   height: 100vh;
   top: 0px;
-  left: -240px;
+  left: -300px;
   padding: 10px;
   background: white;
   width: 60vw;
@@ -28,7 +28,7 @@
   position: fixed;
   top: 0;
   left: 0;
-  z-index: 0;
+  z-index: 1;
 }
 
 .headerLogo {
